[package]
name = "bass-trainer"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
cpal = "0.17"
pitch-detection = "0.3"
ringbuf = "0.4"
crossbeam-channel = "0.5"
rand = "0.8"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"

[profile.release]
lto = "thin"
